welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:9: error: Invalid literal number
		for(pas<-0to 8)
                         ^Runner:11: error: ')' expected but '}' found.
		}
                ^